--- a/src/app/page/menu/menu.page.scss
+++ b/src/app/page/menu/menu.page.scss
@@ -53,7 +53,7 @@ ion-content.main-content {
 }
 
 .custom-searchbar {
-  --background: #c7cacd;
+  --background: #dedeec;
   --border-radius: 14px;
   box-shadow: var(--card-shadow);
   padding: 0;
@@ -99,7 +99,7 @@ ion-content.main-content {
     width: 44px;
     height: 44px;
     border-radius: 10px;
-    background-color: #c2c2d2; /* Icons de categorías */
+    background-color: #dedeec; /* Icons de categorías */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -174,7 +174,7 @@ ion-content.main-content {
   border-radius: 12px;
   overflow: hidden;
   box-shadow: var(--card-shadow);
-  background-color: #ffffff;
+  background-color: #dedeec;
 
   .product-image {
     height: 120px;
@@ -184,6 +184,7 @@ ion-content.main-content {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      
     }
   }
 
@@ -193,7 +194,7 @@ ion-content.main-content {
     .product-name {
       font-size: 14px;
       font-weight: 600;
-      color: var(--text-dark);
+      color: #0b2440;
       margin: 0 0 8px;
     }
 
@@ -205,16 +206,16 @@ ion-content.main-content {
       .product-price {
         font-size: 15px;
         font-weight: 700;
-        color: var(--app-primary-dark);
+        color: rgb(182, 182, 11);
       }
-
+//  BOTÓN DE AÑADIR PRODUCTO
       .add-btn {
-        --background: var(--app-primary);
+        --background:rgb(63, 47, 139) ;
         --border-radius: 8px;
         height: 32px;
         width: 32px;
-        color: #0b2440;
-        
+        color: #dedeec;
+            
         ion-icon {
           font-size: 18px;
         }
@@ -257,8 +258,8 @@ ion-footer {
       position: absolute;
       top: 5px;
       right: 10px;
-      font-size: 9px;
-      padding: 3px 6px;
+      font-size: 10px;
+      padding: 3px 3px;
     }
   }
 }
@@ -295,6 +296,6 @@ ion-footer {
   }
 
   .custom-card .description {
-    font-size: 13px;
+    font-size: 15px;
   }
 }
