--- a/src/app/page/producto/producto.page.html
+++ b/src/app/page/producto/producto.page.html
@@ -1,13 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>producto</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content >
+  <div class="header">
+    
+      <ion-button class="btnHeader" (click)="regresarMenu()">        
+        <ion-icon slot="icon-only" color="light" name="arrow-back"></ion-icon>
+      </ion-button>
+        
+      <ion-button class="btnHeader" (click)="irAlCarrito()">       
+        <ion-icon slot="icon-only" color="light" name="heart-outline"></ion-icon>
+      </ion-button>    
+  </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">producto</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!-- DETALLE DE PRODUCTOS -->
+   <div class="card">
+    <div class="image">
+      <ion-img src="./assets/icon/engranaje.png"></ion-img> 
+    </div>
+   </div>
 </ion-content>
