--- a/src/app/page/producto/producto.page.html
+++ b/src/app/page/producto/producto.page.html
@@ -12,8 +12,8 @@
 
   <!-- DETALLE DE PRODUCTOS -->
    <div class="card">
-    <div class="image">
-      <ion-img src="./assets/icon/engranaje.png"></ion-img> 
+    <div class="product-image">
+      <img [src]="product.image"> 
     </div>
    </div>
 </ion-content>
