--- a/src/app/page/producto/producto.page.scss
+++ b/src/app/page/producto/producto.page.scss
@@ -14,7 +14,19 @@ ion-content {
 
     }
 
-    
+    .card {
+        height: 75%;
+        width: 100%;
+        .product-image {
+            height: 120px;
+            overflow: hidden;
 
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
 
+            }
+        }
+    }
 }
