Mensaje de lo que hiciste

--- a/src/app/page/login/login.page.scss
+++ b/src/app/page/login/login.page.scss
@@ -71,10 +71,10 @@ ion-card-subtitle {
   font-size: 13px;
   color: var(--muted-blue);
 }
-
+// color para las letras dentro del input registro
 .input-item ion-input {
   padding: 6px 0;
-  color: #07203b;
+  color: #d1d1d1;
 }
 
 .input-item ion-item { 
