--- a/src/app/page/payment/payment.page.html
+++ b/src/app/page/payment/payment.page.html
@@ -1,11 +1,116 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>payment</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="payment-page">
+  <!-- Header -->
+  <ion-header class="ion-no-border">
+    <ion-toolbar class="header-toolbar">
+      <ion-title class="main-title">Pago</ion-title>
+      <ion-buttons slot="end">
+        <!-- Avatar de perfil -->
+        <ion-avatar class="user-avatar" (click)="openProfile()">
+          <img src="./assets/icon/perfil.png" alt="perfil">
+        </ion-avatar>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content [fullscreen]="true">  
+  <!-- Métodos de pago -->
+  <div class="payment-methods">
+    <h3>Métodos de pago</h3>
+    <a href="#" class="view-more">Ver más</a>
+    <div class="method-icons">
+      <button class="method-btn yape-btn"></button>
+      <button class="method-btn visa-btn"></button>
+      <button class="method-btn p-btn"></button>
+      <button class="method-btn plin-btn"></button>
+    </div>
+  </div>
+
+  <!-- Formulario de pago -->
+  <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="cardholderName">Nombre del titular</label>
+      <input
+        id="cardholderName"
+        type="text"
+        placeholder="Ej. Ronaldo Escudero"
+        formControlName="cardholderName"
+        [class.is-invalid]="
+          paymentForm.get('cardholderName')?.invalid &&
+          paymentForm.get('cardholderName')?.touched
+        "
+      />
+    </div>
+
+    <div class="form-group">
+      <label for="cardNumber">Número de tarjeta</label>
+      <input
+        id="cardNumber"
+        type="text"
+        placeholder="XXXX XXXX XXXX XXXX"
+        formControlName="cardNumber"
+        maxlength="19"
+        [class.is-invalid]="
+          paymentForm.get('cardNumber')?.invalid &&
+          paymentForm.get('cardNumber')?.touched
+        "
+      />
+    </div>
+
+    <div class="form-row">
+      <div class="form-group expiration-group">
+        <label for="expiryDate">Fecha de vencimiento</label>
+        <input
+          id="expiryDate"
+          type="text"
+          placeholder="MM/YYYY"
+          formControlName="expiryDate"
+          maxlength="7"
+          [class.is-invalid]="
+            paymentForm.get('expiryDate')?.invalid &&
+            paymentForm.get('expiryDate')?.touched
+          "
+        />
+      </div>
+
+      <div class="form-group cvv-group">
+        <label for="cvv">CVV</label>
+        <input
+          id="cvv"
+          type="password"
+          placeholder="Ej. 1234"
+          formControlName="cvv"
+          maxlength="4"
+          [class.is-invalid]="
+            paymentForm.get('cvv')?.invalid && paymentForm.get('cvv')?.touched
+          "
+        />
+        <a href="#" class="view-details">Ver detalles</a>
+      </div>
+    </div>
+
+    <div class="total-section">
+      <p class="total-label">Monto total:</p>
+      <p class="total-amount">S/.610</p>
+    </div>
+
+    <div class="checkbox-group">
+      <input
+        type="checkbox"
+        id="saveData"
+        formControlName="saveData"
+        checked
+      />
+      <label for="saveData">Guardar datos para futuras compras</label>
+    </div>
+
+    <button type="submit" class="finalize-btn" [disabled]="paymentForm.invalid">
+      Finalizar
+    </button>
+  </form>
+
+  <!-- Botón de regresar debajo del formulario -->
+  <div class="return-button">
     <ion-button fill="clear" color="dark" (click)="goBackToMenu()">
-      Regresar a Menú
+      Regresar al Menú
     </ion-button>
-</ion-content>
+  </div>
+</div>
