--- a/src/app/page/producto/producto.page.scss
+++ b/src/app/page/producto/producto.page.scss
@@ -17,14 +17,23 @@ ion-content {
     .card {
         height: 75%;
         width: 100%;
+        background: #fff;
+        position: absolute;
+        bottom: 0;
+        border-radius: 3rem 3rem 0 0;
+        padding: 2rem;
+
         .product-image {
             height: 120px;
-            overflow: hidden;
 
             img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
+                position: absolute;
+                top: -6.5rem;
+                width: 50%;
+                left: 50%;
+                transform: translateX();
+                // height: 100%;
+                // object-fit: cover;
 
             }
         }
