--- a/src/app/page/producto/producto.page.scss
+++ b/src/app/page/producto/producto.page.scss
@@ -45,8 +45,7 @@ ion-content {
         h1 {
             font-size: 2rem;
             font-weight: 700;
-            color: #0b2440;
-            
+            color: #0b2440;            
         }
 
         p {
@@ -54,6 +53,25 @@ ion-content {
             font-weight: 700;
             color: rgb(182, 182, 11);
         }
+    }
+    .product-actions{
+        margin-top: 60%;
+        display: flex;
+        justify-content: center;          
+        gap: 2rem;
+        
+    }
+    .backcolor{
+            background: linear-gradient(to right, #151277, #6a5acd);
+            color: #fff;
+            border-radius: 10px;
+            padding: 0.8rem 0;
+            font-size: 16px;
+            font-weight: 600;
+        }
+    .rating-valuee{
+        margin-right: 1rem;
+        background: #0b2440;
     }
 
 }
