--- a/src/app/page/perfil/perfil.page.html
+++ b/src/app/page/perfil/perfil.page.html
@@ -3,7 +3,7 @@
     <ion-title class="main-title">Perfil</ion-title>
     <ion-buttons slot="end">
       <ion-avatar class="user-avatar" (click)="openProfile()">
-        <img src="./assets/icon/perfil.png" alt="perfil">
+        <img [src]="user.avatar || 'assets/icon/perfil.png'" alt="perfil">
       </ion-avatar>
     </ion-buttons>
   </ion-toolbar>
@@ -12,18 +12,45 @@
 <ion-content [fullscreen]="true" class="main-content">
   <div class="perfil-container">
     <h2>Bienvenido, {{ user.name }}</h2>
+    <p>Correo: <strong *ngIf="user.email">{{ user.email }}</strong><span *ngIf="!user.email"> (no registrado)</span></p>
     <p>Aquí puedes ver y editar tu información personal.</p>
-    
+
     <div class="profile-card">
       <ion-avatar class="profile-avatar">
-        <img [src]="user.avatar" alt="perfil">
+        <img [src]="user.avatar || 'assets/icon/perfil.png'" alt="perfil">
       </ion-avatar>
-      <h2>{{ user.name }}</h2>
-      <p>{{ user.email }}</p>
-      <p>{{ user.phone }}</p>
-    </div>  
 
-    <div class="actions">
+      <div class="profile-fields">
+        <div *ngIf="!editing">
+          <h2>{{ user.name }}</h2>
+          <p>{{ user.email }}</p>
+          <p>{{ user.phone }}</p>
+        </div>
+
+        <div *ngIf="editing">
+          <label>Nombre</label>
+          <input type="text" [(ngModel)]="user.name" />
+
+          <label>Correo</label>
+          <input type="email" [(ngModel)]="user.email" />
+
+          <label>Teléfono</label>
+          <input type="text" [(ngModel)]="user.phone" />
+
+          <div class="avatar-upload">
+            <input type="file" accept="image/*" (change)="onFileSelected($event)" hidden #fileInput />
+            <ion-button size="small" (click)="fileInput.click()">Subir imagen</ion-button>
+          </div>
+
+          <div class="edit-actions">
+            <ion-button color="primary" (click)="saveProfile()">Guardar</ion-button>
+            <ion-button fill="clear" (click)="editing=false">Cancelar</ion-button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="actions" *ngIf="!editing">
       <ion-button expand="full" color="primary" (click)="editProfile()">
         Editar Perfil
       </ion-button>
@@ -40,12 +67,12 @@
 <ion-footer>
   <ion-toolbar>
     <ion-tab-bar class="bottom-nav">
-      <ion-tab-button *ngFor="let item of navItems" 
-                      (click)="navigate(item.route)" 
+      <ion-tab-button *ngFor="let item of navItems"
+                      (click)="navigate(item.route)"
                       [class.active]="item.route === activeRoute"
                       [routerLink]="item.route">
         <ion-icon [name]="item.icon"></ion-icon>
-        <ion-label *ngIf="item.label">{{ item.label }}</ion-label> 
+        <ion-label *ngIf="item.label">{{ item.label }}</ion-label>
         <ion-badge *ngIf="item.badge" color="danger">{{ item.badge }}</ion-badge>
       </ion-tab-button>
     </ion-tab-bar>
