--- a/src/app/page/register/register.page.html
+++ b/src/app/page/register/register.page.html
@@ -1,8 +1,8 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-title>Gestion</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content class="login-page" fullscreen>
   <div class="center-box">
