Correccion en la fucionalidad de la barra de busqueda search ,ademas de la implementacion de la venta perfil no funcional y eliminacion de la ventana search por redundancia

--- a/src/app/page/menu/menu.page.html
+++ b/src/app/page/menu/menu.page.html
@@ -14,7 +14,7 @@
     <div class="content-wrapper">
         <!-- Buscador -->
         <div class="search-bar-container">
-            <ion-searchbar placeholder="Buscar" mode="ios" class="custom-searchbar"></ion-searchbar>
+            <ion-searchbar placeholder="Buscar" mode="ios" class="custom-searchbar" (ionInput)="onSearchChange($event)"></ion-searchbar>
         </div>
 
         <!-- Categorías -->
